--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="space">
     <h1>Black Holes</h1>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Black_hole_-_Messier_87_crop_max_res.jpg" alt="Black Hole" class="blackhole-img" width="400">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Black_hole_-_Messier_87_crop_max_res.jpg" alt="Black Hole" class="blackhole-img">
 
     
       <h2>What is a Black Hole</h2>
